# Veritas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  veritas.py
data/datasets/: alphabet-income-statement-2023-2025.csv  alphabet-key-metrics-2025.csv  alphabet-revenue-by-geography-2023-2025.csv  alphabet-revenue-by-segment-2023-2025.csv  alphabet-segment-operating-income-2024-2025.csv  blackrock-aum-by-client-2025.csv  blackrock-aum-by-region-2025.csv  blackrock-financial-highlights-2021-2025.csv  blackrock-key-facts-2025.csv  fred-dgs10-historical.csv  fred-gdp-historical.csv  fred-gfdegdq188s-historical.csv  fred-sp500-historical.csv  mmf-statistics-supporting-data-01-2026.xlsx  sec-stats-municipal-advisors-20260204.xlsx  sec-stats-sbsds-20260204.xlsx  sec-stats-transfer-agents-20260204.xlsx  sp500-daily-prices-2026.csv
scripts/: batch_assist.py  batch_assist_resume.py  batch_ingest.py  batch_ingest2.py  batch_pipeline.py  test_categorization.py  test_recat.py
src/veritas/: __init__.py  __main__.py  assist.py  claim_extract.py  cli.py  config.py  db.py  doctor.py  export.py  ingest.py  ingest_text.py  knowledge_graph.py  models.py  paths.py  scoring.py  search.py  transcribe.py  verify.py
tests/: test_assist.py  test_categorizer_v2.py  test_claim_extract.py  test_cross_source.py  test_edgar_enrichment.py  test_google_factcheck.py  test_ingest_text.py  test_knowledge_graph.py  test_new_sources.py  test_smoke.py  test_systemic_fixes.py  test_wikipedia_fred.py  test_yfinance_source.py
tests/fixtures/: sample_transcript.json
(+22 files in other folders)
