[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "veritas"
version = "0.1.0"
description = "Local claim-extraction and evidence-tracking engine"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
veritas = "veritas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
